force-app/main/driver-assistant/objects/Route_Event__c/Route_Event__c.object-meta.xml
<CustomObject>
    <label>Route Event</label>
    <nameField>
        <label>Route Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>