force-app/main/driver-assistant/objects/Route_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>