force-app/main/driver-assistant/objects/Route_Event__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Route Events</relationshipLabel>
    <relationshipName>Route_Events</relationshipName>
    <type>Lookup</type>
</CustomField>