force-app/main/driver-assistant/objects/Route_Event__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stop</label>
    <referenceTo>Stop__c</referenceTo>
    <relationshipLabel>Route Events</relationshipLabel>
    <relationshipName>Route_Events</relationshipName>
    <type>Lookup</type>
</CustomField>